# prototype-auto-cloud

./: pyproject.toml
prototype_auto_cloud/data/: report.py
prototype_auto_cloud/model/app/: cms.py
prototype_auto_cloud/model/controls/: table.py
prototype_auto_cloud/model/pages/cms/: report.py
tests/cms/: test_pos_report.py
